autoscaling_train_schedule_instance.yaml
kind: Service
apiVersion: v1
metadata:
  name: train-autoscaling
  annotations: 
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  selector:
    app: train-autoscaling
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30808

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-autoscaling
  labels:
    app: train-autoscaling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: train-autoscaling
  template:
    metadata:
      labels:
        app: train-autoscaling
    spec:
      containers:
      - name: train-autoscaling
        image: adilkhanekt/train-schedule-kube-autoscaling
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
        volumeMounts:
        - name: app-storage
          mountPath: /tmp/ebsvolume/
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: train-storage
