grafana_kube.yaml
kind: Service
apiVersion: v1
metadata:
        namespace: default
        name: grafana-ext
spec:
        type: NodePort
        selector:
                app.kubernetes.io/instance: grafana
                app.kubernetes.io/name: grafana
        ports:
                - protocol: TCP
                  port: 3000
                  nodePort: 30000
