monitoring_train_schedule_instance.yaml
kind: Service
apiVersion: v1
metadata:
  name: train-monitoring
  annotations: 
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  selector:
    app: train-monitoring
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30101

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-monitoring
  labels:
    app: train-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: train-monitoring
  template:
    metadata:
      labels:
        app: train-monitoring
    spec:
      containers:
      - name: train-monitoring
        image: adilkhanekt/train-schedule-kube-monit
        ports:
        - containerPort: 8080
