selfhealing_train_schedule_instance.yaml
kind: Service
apiVersion: v1
metadata:
  name: train-selfhealing
  annotations: 
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  selector:
    app: train-selfhealing
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30606

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-selfhealing
  labels:
    app: train-selfhealing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: train-selfhealing
  template:
    metadata:
      labels:
        app: train-selfhealing
    spec:
      containers:
      - name: train-selfhealing
        image: adilkhanekt/train-schedule-kube-selfhealing
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
