mongo-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-ingress
  labels:
    app: mongo-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-ingress
  template:
    metadata:
      labels:
        app: mongo-ingress
    spec:
      containers:
      - name: mongo-ingress
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-ingress
spec:
  selector:
    app: mongo-ingress
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-ingress
                port:
                  number: 8081
